learning modfying elements in dom

--- a/DOM-learning/classname prop.html
+++ b/DOM-learning/classname prop.html
@@ -6,8 +6,16 @@
     <title>ClassName Property</title>
 </head>
 <body>
+    <style>
+        .red{
+            background-color: red;
+        }
+    </style>
     <h1 class="h1 tag class" id="id">hello this ClassName</h1>
     <p class="para-1"></p>
+    <button onclick=" makebackground()">click to add style</button>
+    <button onclick=" removebackground()">click to remove style</button>
+    <button onclick=" togglestyle()">click to toggle style</button>
     <script src="classname prop.js"></script>
 </body>
 </html>
