adding classes floder

--- a/ES6/classes/classes.html
+++ b/ES6/classes/classes.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>classes in js</title>
 </head>
+<script src="classes.js" defer></script>
 <body>
-    <script src="ES6.js"></script>
+    <h1 style="text-align: center;">classes</h1>
 </body>
 </html>
