--- a/ES6/promises and asynca nad await/promises.html
+++ b/ES6/promises and asynca nad await/promises.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>promises</title>
-</head>
-<body>
-    <script src="promises.js"></script>
+  </head>
+  <body>
+    <!-- <script src="promises.js"></script> -->
+    <script src="fetch data.js"></script>
     <!-- <script src="errorhandling.js"></script> -->
-</body>
+  </body>
 </html>
