--- a/jsobjectn/json.html
+++ b/jsobjectn/json.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> learning json</title>
 </head>
-<script src="json.js"></script>
+<script src="json.js" defer></script>
 <body>
     <h1>details</h1>
     
