--- a/ES6/modules/modules.html
+++ b/ES6/modules/modules.html
@@ -6,6 +6,7 @@
     <title>Modules</title>
 </head>
 <script src="modules.js" defer></script>    
+<script src="index.js" defer></script>    
 <body>
 </body>
 </html>
